--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -11,6 +12,18 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "bcryptjs": "^2.4.3",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "connect-flash": "^0.1.1",
+    "express-session": "^1.17.3",
+    "fs-extra": "^10.1.0",
+    "method-override": "^3.0.0",
+    "mocha": "^10.0.0",
+    "mongoose": "^5.9.7",
+    "mongoose-seed": "^0.6.0",
+    "multer": "^1.4.5-lts.1",
+    "startbootstrap-sb-admin-2": "^4.1.4",
     "morgan": "~1.9.1"
   }
 }
